--- a/swifty.css
+++ b/swifty.css
@@ -1019,11 +1019,7 @@
     }
 }
 
-#helpjuice-widget-contact{
-    display: none;
-}
-
-#helpjuice-widget #helpjuice-widget-expanded {
+#helpjuice-widget #helpjuice-widget-expanded #helpjuice-widget-contact {
     display: flex;
     justify-content: space-between;
     align-items: center;
